# Light-WAF

./: ARCHITECTURE-en.md  BOUNDARY.md  CLA.md  Cargo.toml  README.md  config.toml
.github/workflows/: ci.yml
crates/waf-core/: Cargo.toml
crates/waf-core/src/: lib.rs
crates/waf-core/src/network/: client_ip.rs  mod.rs
crates/waf-corpus/: Cargo.toml
crates/waf-corpus/benches/: inspection.rs
crates/waf-corpus/examples/: latency_distribution.rs  regression_gate.rs
crates/waf-corpus/src/: lib.rs  runner.rs
crates/waf-corpus/src/cases/: graphql.rs  grpc.rs  header_injection.rs  ldap.rs  lfi_rfi.rs  mail.rs  mod.rs  nosql.rs  path_traversal.rs  rce.rs  sqli.rs  ssi.rs  ssti.rs  xss.rs  xxe.rs
crates/waf-corpus/tests/: validation.rs
crates/waf-detection/: Cargo.toml
crates/waf-detection/examples/: crs_bench.rs
crates/waf-detection/src/: graphql.rs  grpc.rs  header_injection.rs  ldap.rs  lfi_rfi.rs  lib.rs  mail.rs  nosql.rs  path_traversal.rs  rate_limit.rs  rce.rs  request_smuggling.rs  sqli.rs  ssi.rs  ssrf.rs  ssti.rs  xss.rs  xxe.rs
crates/waf-detection/src/crs/: ast.rs  lexer.rs  mod.rs  module.rs  operator.rs  parse.rs  target.rs  transform.rs
crates/waf-detection/tests/: crs.rs  graphql.rs  grpc.rs  header_injection.rs  lfi_rfi.rs  path_traversal.rs  rate_limit.rs  rce.rs  request_smuggling.rs  sqli.rs  ssrf.rs  xss.rs
crates/waf-normalizer/: Cargo.toml
crates/waf-normalizer/src/: body.rs  graphql.rs  grpc.rs  lib.rs  url.rs
crates/waf-normalizer/tests/: cookie_robustness.proptest-regressions  cookie_robustness.rs  ctless_json.rs  differential.rs  form_robustness.proptest-regressions  form_robustness.rs  json_robustness.rs  normalizer.rs  path_robustness.proptest-regressions  path_robustness.rs  query_robustness.proptest-regressions  query_robustness.rs
crates/waf-pipeline/: Cargo.toml
crates/waf-pipeline/src/: lib.rs  noop_logger.rs
crates/waf-pipeline/tests/: pipeline.rs
crates/waf-proxy/: Cargo.toml
crates/waf-proxy/examples/: load_overhead.rs
crates/waf-proxy/src/: config.rs  lib.rs  main.rs  tls.rs
crates/waf-proxy/tests/: crs.rs  grpc.rs  integration.rs  tls.rs
crates/waf-wasm/: Cargo.toml
crates/waf-wasm/examples/: wasm_bench.rs
crates/waf-wasm/src/: abi.rs  host.rs  lib.rs  marshal.rs  memory.rs  report.rs  runtime.rs
crates/waf-wasm/tests/: runtime.rs  smoke.rs
crates/waf-wasm/tests/fixtures/: README.md
crates/waf-wasm/tests/fixtures/block_filter/: Cargo.toml
crates/waf-wasm/tests/fixtures/block_filter/src/: lib.rs
examples/: README.md  api-json.toml  strict.toml
examples/wasm-plugin/: Cargo.toml  README.md
examples/wasm-plugin/src/: lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: cookies.rs  flatten_json.rs  form_body.rs  graphql_lex.rs  grpc_extract.rs  normalize_path.rs  query.rs
fuzz/seeds/cookies/: rfc-edges-and-flood
fuzz/seeds/flatten_json/: nested-and-wide
fuzz/seeds/form_body/: delims-plus-flood
fuzz/seeds/normalize_path/: traversal-mix
fuzz/seeds/query/: encoded-delims-and-flood
